# tiralabra_dungeon_generator_V2

./: .gitignore  README.md  coverage.xml  pyproject.toml  requirements.txt
doc/: performance.md  project_definition.md  test_document.md  test_performance_document.md  user_instructions.md
performance_test/: install_dependencies.sh  run_tests.sh
resources/: .gitignore  maze_persisted_01.data  maze_persisted_02.data  maze_persisted_03.data
scripts/: clean.sh  create_and_play_video.sh  create_poetry_project.sh  create_single_video.sh  create_video.sh  create_videos_of_all_picture_directories.sh  install_dependencies.sh  run_4_videos_with_video_visualizer_and_create_2x2videos.sh  run_4_videos_with_video_visualizer_and_create_4x4videos.sh  run_9nish_videos_and_create_high_resolution_videos.sh  run_9nish_videos_with_video_visualizer_and_create_3x3video.sh  run_all_with_video_visualizer_and_create_videos.sh  run_tests.sh  suorita_ascii_visualizer.sh  suorita_console_visualizer.sh  suorita_console_visualizer_astar.sh  suorita_console_visualizer_astar_jump_point.sh  suorita_console_visualizer_bfs.sh  suorita_console_visualizer_dfs.sh  suorita_console_visualizer_dijkstra_solving.sh  suorita_console_visualizer_memento_random.sh  suorita_console_visualizer_wall_follower.sh  suorita_dfs_test.sh  suorita_dummy_visualizer.sh  suorita_maze_persister.sh  suorita_mini_console_visualizer.sh  suorita_video_visualizer.sh  test_maze_persister.sh  test_running_all_solving_ascii_visualiler.sh  test_running_all_solving_console_visualizer.sh  test_running_all_solving_dummy_visualizer.sh  (+2 more)
(+134 files in other folders)
