[tool.poetry]
name = "dungv2"
version = "0.1.0"
description = ""
authors = ["Jussi Asp <jussi.asp@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
blessed = "^1.19.1"
pipreqs = "^0.4.11"
invoke = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q"
testpaths = [
  "tests"
]

[tool.coverage.run]
omit = [
  "src/visualizer/*",
  "src/solving/astar_jump_point.py",
  "src/generation/common_generation.py",
  "src/main.py",
  "src/tools/maze_persister.py"
]

[dummy]
addopts = "--ignore=tests_performance/*" 

